k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-svc
  namespace: bankapp-ns
spec:
  selector:
    app: bankapp
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
