k8s/mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: bankapp-ns
spec:
  selector:
    app: mysql
  clusterIP: None
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
